--- a/app/index.html
+++ b/app/index.html
@@ -148,5 +148,7 @@
   <footer>
     <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a class="btn btn--orange" href="#">Get in Touch</a></p>
   </footer>
+
+  <script src="temp/scripts/App-bundled.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
