--- a/app/index.html
+++ b/app/index.html
@@ -145,8 +145,10 @@
     </div>
   </div>
 
-  <footer>
-    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a class="btn btn--orange" href="#">Get in Touch</a></p>
+  <footer class="site-footer">
+    <p><span class="site-footer__description">
+      Copyright &copy; 2017 Clear View Escapes. All rights reserved. 
+    </span><a class="btn btn--orange" href="#">Get in Touch</a></p>
   </footer>
 
   <script src="temp/scripts/App-bundled.js" type="text/javascript" charset="utf-8"></script>
